# chem-ai

./: README.md  database.db  proxy.py  pyproject.toml  requirements-dev.txt  requirements.txt
api/: app.py  database.py  models.py  schemas.py  security.py
api/routers/: auth.py  predictions.py  users.py
api/tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_predictions.py  test_security.py  test_users.py
chemai/: callbacks.py  chem_featurizer.py  chemberta_featurizer.py  datamodule.py  dataset.py  loader.py  model.py  predictor.py  train.py
chemai/tests/: conftest.py  test_chemberta_featurizer.py  test_datamodule.py  test_dataset.py  test_exporter.py  test_exporter_integration.py  test_exporter_lora.py  test_featurizer.py  test_integration.py  test_loader.py  test_model_mix.py  test_model_pure.py  test_proxy.py
chemai/tests/mocks/: dummy_model.py  mock_peft.py
data/: test.csv
data/nist_dippr_data/: data.csv  data_features.csv  test.csv  test_features.csv
models/torch/mix_base/: mlp.pt  scaler.json  tokenizer.json
models/torch/mix_lora/: README.md  adapter_model.safetensors  mlp.pt
models/torch/pure_base/: mlp.pt
models/torch/pure_lora/: adapter_config.json  adapter_model.safetensors  mlp.pt  scaler.json  tokenizer.json
notebooks/: analise_exploratoria_features.ipynb  train_models_sklearn.ipynb  train_models_sklearn_optuna.ipynb  train_models_torch.ipynb  train_models_torch_optuna.ipynb
streamlit_app/: app_admin.py  app_main.py  chemapp.py
